# QD456TDirect

./: CMakeLists.txt  Main.qml  main.cpp
config/: camera1.json  camera2.json  camera3.json  camera4.json  camera_config.json  gpio_config.json
qml/components/: CameraTile.qml  ImageCanvas.qml  RoiEditorWindow.qml  RoiItem.qml  RoiRegionItem.qml
qml/pages/: DashboardPage.qml  RoiEditorPage.qml
src/: Algorithm.cpp  Algorithm.h  AppLogger.cpp  AppLogger.h  CameraConfig.h  CameraFrameItem.cpp  CameraFrameItem.h  CameraParamsWrapper.h  CameraViewModel.cpp  CameraViewModel.h  CaptureWorker.cpp  CaptureWorker.h  ConfigReader.cpp  ConfigReader.h  DetectionRoiConfig.h  GPIOController.cpp  GPIOController.h  HikCamera.cpp  HikCamera.h  HikSdkRuntime.h  HikSdkWrapper.h  MainViewWindow.cpp  MainViewWindow.h  ProcessWorker.cpp  ProcessWorker.h  RoiData.cpp  RoiData.h  RoiManager.cpp  RoiManager.h
